--- a/assets/css/source/base/_typography.scss
+++ b/assets/css/source/base/_typography.scss
@@ -4,84 +4,168 @@
 
 p {
     color: inherit;
+    margin: 0 0 $general_margin;
 
     &:last-child { margin-bottom: 0 !important; }
 }
 a {
-    color: inherit;
-    transition: all $global__transition;
+    transition: all $global_transition;
     
     &:before,
-    &:after { transition: all $global__transition; }
+    &:after { transition: all $global_transition; }
+
+    &:not([class]),
+    &[class=""] {
+        color: $general_linkColor;
+
+        &:hover,
+        &:focus {
+            @include mediaMinWidth($mobileBreakpoint){
+                color: $general_linkColorHover;
+            }
+        }
+    }
+    &.builtin {
+        color: inherit;
+        text-decoration: none;
+
+        &:hover,
+        &:focus {
+            @include mediaMinWidth($mobileBreakpoint){
+                color: $general_linkColorHover;
+            }
+        }
+    }
 }
-img { height: auto; }
+hr {
+    border-color: $general_borderColor;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    margin: $general_margin*2 0;
+}
+code,
+kbd {
+    border: none;
+    border-radius: 0;
+    display: inline;
+    padding: 1px 4px;
+}
 code {
-    border-radius: $global-radius;
-    font-size: 87.5%;
+    background-color: rgba($medium_gray, 0.05);
+    color: $medium_gray;
 }
-kbd { font-size: 87.5%; }
+kbd {
+    background-color: rgba($dark_gray, 0.05);
+    color: $dark_gray;
+}
 pre {
     color: $black;
-    font-family: $font-family-monospace;
     font-size: 87.5%;
-    margin: 1.5rem 0;
+    margin: $general_margin 0;
     white-space: pre-wrap;
     word-break: break-all;
     word-wrap: break-word;
 }
 q { quotes: '“' '”'; }
 mark {
-    background: rgba(get-color(warning), .5);
+    background: rgba($medium_gray, .5);
     padding: 1px 4px;
 }
-big { font-size: 125%; }
 address {
     font-style: italic;
-    margin: 0 0 $paragraph-margin-bottom;
+    margin: 0 0 $general_margin;
 }
-label {
-    font-size: inherit;
-    line-height: inherit;
+blockquote {
+    margin: 0 0 $general_margin;
 }
-
+figure {
+    margin: 0 0 $general_margin;
+}
 
 /*** Headings ***/
-h1,.h1,
-h2,.h2,
-h3,.h3,
-h4,.h4 {
-    font-family: $secondary-font-family;
-}
 h1,.h1,
 h2,.h2,
 h3,.h3,
 h4,.h4,
 h5,.h5,
 h6,.h6 {
-    margin-bottom: $header-margin-bottom;
-    margin-top: $header-margin-bottom;
-
-    a { color: inherit; }
+    font-weight: 700;
+    margin: 0 0 $general_margin;
+}
+h1,.h1 {
+    @include getStyles($h1);
+}
+h2,.h2 {
+    @include getStyles($h2);
+}
+h3,.h3 {
+    @include getStyles($h3);
+}
+h4,.h4 {
+    @include getStyles($h4);
+}
+h5,.h5 {
+    @include getStyles($h5);
+}
+h6,.h6 {
+    @include getStyles($h6);
 }
 
 
 /*** Lists ***/
 ol, ul {
     color: inherit;
-    margin-top: $paragraph-margin-bottom;
+    margin-bottom: $general_margin;
+    margin-top: $general_margin;
+    padding: 0 0 0 $general_margin*2;
     
     ol, ul {
         font-size: inherit;
-        margin-bottom: $paragraph-margin-bottom/2;
-        margin-top: $paragraph-margin-bottom/2;
+        margin-bottom: $general_margin/2;
+        margin-top: $general_margin/2;
+    }
+    li {
+        margin: 0;
     }
 }
 dl {
-    margin-bottom: $paragraph-margin-bottom;
-    margin-top: $paragraph-margin-bottom;
+    margin-bottom: $general_margin;
+    margin-top: $general_margin;
 
-    dt { margin-top: rem-calc(10); }
+    dt { margin: $general_margin/2 0; }
+    dd {
+        margin: 0 0 0 $general_margin*2;
+    }
 }
 
 
 /*** Table ***/
+table {
+    border-collapse: collapse;
+    border-radius: 0;
+    margin: 0 0 $general_margin;
+    width: 100%;
+}
+thead, tfoot {
+    border: 1px solid $general_borderColor;
+    
+    th, td {
+        font-weight: 700;
+        padding: 0.5rem 0.625rem 0.625rem;
+        text-align: left;
+    }
+}
+thead {
+    background: $general_borderColor;
+}
+tbody {
+    border: 1px solid $general_borderColor;
+    background-color: $white;
+
+    th, td {
+        padding: 0.5rem 0.625rem 0.625rem;
+    }
+}
+tfoot {
+    background: $light_gray;
+}
