--- a/assets/css/source/components/_forms.scss
+++ b/assets/css/source/components/_forms.scss
@@ -2,18 +2,36 @@
  * Buttons
  */
 
-%btn {
-    border-width: 2px;
-    font-weight: $global-weight-normal;
-    letter-spacing: 0.5px;
-    line-height: rem-calc(21);
-    min-width: 100px;
-    text-transform: uppercase;
-
-    @include breakpoint(medium down) {}
+ %btn {
+    @include getStyles($small);
+    border: none;
+    border-radius: 1px;
+    display: inline-block;
+    line-height: 1.5;
+    min-width: 170px;
+    padding: 10px 20px 9px;
+    text-align: center;
+    text-decoration: none;
+    transition: $global_transition;
 }
-.button {
+.cs__button {
     @extend %btn;
+
+    &:not(&--transparent) {
+        background: $black;
+        color: $white;
+    }
+    &--transparent {
+        background: transparent;
+        color: inherit;
+    }
+    &:hover,
+    &:focus {
+        @include mediaMinWidth($mobileBreakpoint){
+            background: $medium_gray !important;
+            color: $white !important;
+        }
+    }
 }
 
 
@@ -34,66 +52,33 @@
 [type='time'],
 [type='url'],
 [type='color'],
-textarea,
-select {
-    border-bottom: 1px solid $medium-gray;
-    display: inline-block;
-    margin: 0 0 10px;
+textarea {
+
+    background-color: transparent;
+    border: none;
+    border-bottom-color: $general_borderColor;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-radius: 0;
+    color: $black;
+    display: block;
     outline: none;
+    padding: 10px 0;
+    transition: all $global_transition;
+    width: 100%;
 
     &[multiple] { height: auto; }
-    &:-webkit-autofill,
-    &:-webkit-autofill:hover,
-    &:-webkit-autofill:focus,
-    &:-webkit-autofill:active {
-        -webkit-box-shadow: inset 0 0 0 50px $body-background;
-        box-shadow: inset 0 0 0 50px $body-background;
-        -webkit-text-fill-color: $input-color;
-    }
-    &:focus {}
-}
-[type='text'],
-[type='password'],
-[type='date'],
-[type='datetime'],
-[type='datetime-local'],
-[type='month'],
-[type='week'],
-[type='email'],
-[type='number'],
-[type='search'],
-[type='tel'],
-[type='time'],
-[type='url'],
-[type='color'] {
-    height: auto;
-}
-[type='number'] {
-    -webkit-appearance: textfield;
-    -moz-appearance: textfield;
 
-    &::-webkit-outer-spin-button,
-    &::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        margin: 0;
-    }
+    &:hover,
+    &:focus { padding-left: 10px; }
 }
 select {
-    //-webkit-appearance: none;
-    //-moz-appearance: none;
     height: auto;
 
-    &:invalid { color: $input-placeholder-color; }
     &[multiple] { background: transparent; }
-
-    option:not(:first-of-type) { color: $input-color; }
 }
 textarea {
-    border-radius: $input-radius;
     height: 170px;
-    line-height: $global-lineheight;
-    padding: $input-padding;
     resize: none;
 
     &[rows] { height: 170px; }
