--- a/assets/css/source/layout/_header.scss
+++ b/assets/css/source/layout/_header.scss
@@ -3,21 +3,78 @@
  */
 
 .cs__header {
-    background: $primary-color;
-    //height: $header__height;
+    background: $white;
+    height: map-get($header_height,'default');
     left: 0;
-    padding: $medium-column-gutter/2 0;
     position: fixed;
     right: 0;
     top: 0;
     z-index: 100;
+    
+    @include mediaMaxWidth(md){
+        height: map-get($header_height,'md');
+    }
 
-    @include breakpoint(medium down) {}
+    &__container {
+        align-items: center;
+        height: inherit;
+    }
+    &__logo {}
+    &__menu {}
+    &__toggle {}
 
     body.admin-bar & {
         top: 32px;
 
         @media screen and (max-width: 782px) { top: 46px; }
         @media screen and (max-width: 600px) { top: 0; }
+    }
+    body.menu-active & {
+        .cs__toggle {
+            &:before {
+                height: 4px;
+                top: 50%;
+                transform: translateY(-50%) rotate(45deg);
+            }
+            &:after {
+                bottom: 50%;
+                height: 4px;
+                transform: translateY(50%) rotate(-45deg);
+            }
+            &__stick {
+                left: 50%;
+                width: 0;
+            }
+        }
+    }
+}
+
+.cs__toggle {
+    background: transparent;
+    border: none;
+    height: 17px;
+    position: relative;
+    width: 24px;
+    
+    &:before,
+    &:after,
+    &__stick {
+        background-color: $black;
+        content: "";
+        display: block;
+        height: 3px;
+        left: 0;
+        position: absolute;
+        transition: all $global_transition;
+        width: 100%;
+    }
+    &:before {
+        top: 0;
+    }
+    &:after {
+        bottom: 0;
+    }
+    &__stick {
+        top: 7px;
     }
 }
