--- a/assets/css/source/layout/_sections.scss
+++ b/assets/css/source/layout/_sections.scss
@@ -2,4 +2,12 @@
  * Sections
  */
 
-@import "sections/hero";
+.cs__section {
+    &__image {
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+
+@import "section/hero";
