--- a/assets/css/source/helpers/_mixins.scss
+++ b/assets/css/source/helpers/_mixins.scss
@@ -53,3 +53,11 @@
         }
     }
 }
+
+@mixin getStylesBreakpoints($styles){
+    @if type_of($styles)=='map' {
+        @each $itemScreen, $itemStyles in $styles{
+            @include getStyles($itemStyles, '$itemScreen');
+        }
+    }
+}
