--- a/assets/css/source/editor.scss
+++ b/assets/css/source/editor.scss
@@ -1,10 +1,7 @@
 /************ Base styling ************/
 @import 'helpers/variables';
 @import 'helpers/mixins';
-
-
-/*** Fonts ***/
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import 'base/fonts';
 
 
 /*** Typography ***/
