--- a/assets/css/source/helpers/_variables.scss
+++ b/assets/css/source/helpers/_variables.scss
@@ -38,28 +38,40 @@ $text-normal: 400;
 $text-bold: 700;
 
 $h1: (
-    'font-size': 3rem,
-    'line-height': 1.3
+    default: (
+		'font-size': 3rem,
+		'line-height': 1.3
+	)
 );
 $h2: (
-    'font-size': 2.625rem,
-    'line-height': 1.3
+    default: (
+		'font-size': 2.625rem,
+		'line-height': 1.3
+	)
 );
 $h3: (
-    'font-size': 2rem,
-    'line-height': 1.3
+    default: (
+		'font-size': 2rem,
+		'line-height': 1.3
+	)
 );
 $h4: (
-    'font-size': 1.5rem,
-    'line-height': 1.3
+    default: (
+		'font-size': 1.5rem,
+		'line-height': 1.3
+	)
 );
 $h5: (
-    'font-size': 1.3125rem,
-    'line-height': 1.3
+    default: (
+		'font-size': 1.3125rem,
+		'line-height': 1.3
+	)
 );
 $h6: (
-    'font-size': 1.125rem,
-    'line-height': 1.3
+    default: (
+		'font-size': 1.125rem,
+		'line-height': 1.3
+	)
 );
 $small: (
     'font-size': 0.875rem
