--- a/assets/css/source/layout/_header.scss
+++ b/assets/css/source/layout/_header.scss
@@ -3,6 +3,8 @@
  */
 
 .cs__header {
+    $h: &;
+
     background: $white;
     height: map-get($header_height,'default');
     left: 0;
@@ -11,17 +13,65 @@
     top: 0;
     z-index: 100;
     
-    @include mediaMaxWidth(md){
-        height: map-get($header_height,'md');
+    @include mediaMaxWidth($mobileBreakpoint){
+        height: map-get($header_height,$mobileBreakpoint);
     }
 
     &__container {
         align-items: center;
+        background: inherit;
+        flex-flow: row nowrap;
         height: inherit;
     }
-    &__logo {}
-    &__menu {}
-    &__toggle {}
+    &__toggle {
+        @include mediaMinWidth($mobileBreakpoint){
+            display: none !important;
+        }
+        @include mediaBetween(xs,$mobileBreakpoint){
+            flex: 0 0 calc(50% - 100px);
+            max-width: calc(50% - 100px);
+        }
+        @include mediaMaxWidth(xs){
+            flex: 0 0 54px;
+            max-width: 54px;
+        }
+    }
+    &__logo {
+        flex: 0 0 #{map-get($header_logoWidth,'default') + $gutter};
+        max-width: #{map-get($header_logoWidth,'default') + $gutter};
+
+        @include mediaMaxWidth(xs){
+            flex: 1 0 auto;
+            max-width: calc(100% - 164px);
+        }
+
+        .logo {
+            display: inline-block;
+            width: map-get($header_logoWidth,'default');
+
+            @include mediaMaxWidth(xs){
+                width: map-get($header_logoWidth,'xs');
+            }
+        }
+    }
+    &__menu {
+        @include mediaMinWidth($mobileBreakpoint){
+            height: inherit;
+        }
+        @include mediaMaxWidth($mobileBreakpoint){
+            background: $white;
+            left: 0;
+            max-width: none;
+            opacity: 0;
+            position: absolute;
+            right: 0;
+            top: 100%;
+            transform: translateY(-100%);
+            transition: opacity 0s $header_menuTransition, transform $header_menuTransition ease-in-out, visibility 0s $header_menuTransition;
+            visibility: hidden;
+            z-index: -1;
+        }
+    }
 
     body.admin-bar & {
         top: 32px;
@@ -30,6 +80,12 @@
         @media screen and (max-width: 600px) { top: 0; }
     }
     body.menu-active & {
+        #{$h}__menu {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+            transition: transform $header_menuTransition ease-in-out;
+        }
         .cs__toggle {
             &:before {
                 height: 4px;
